tests/valid_programs/basics/decaying_duck.duck
fn main() {
    let x: {x: Int | String} = {x: 100};
}
