tests/errors/references/expected_mut.duck
fn main() {
    const a: &mut Int = &100;
}
